# nw_riemo_robots

./: CMakeLists.txt  package.xml
config/: mico_move_config.yaml  riemo_robot_mico.json  riemo_robot_mico_nw.json
launch/: micoViz.rviz  mico_rviz_only.launch  riemoMicoViz.rviz  riemo_mico_server.launch  riemo_mico_server_with_emulator.launch
scripts/: run_riemo_move_mico_server.sh  run_riemo_robot_emulator.sh  run_riemo_robot_visualizer.sh
