<?xml version="1.0"?>
<package>
  <name>nw_riemo_robots</name>
  <version>0.0.1</version>
  <description>
    Description and launch inforamtion for robots in RieMO.
  </description>
  <maintainer email="nathan.ratliff@lularobotics.com">Nathan Ratliff</maintainer>
  <maintainer email="daniel.kappler@lularobotics.com">Daniel Kappler</maintainer>
  <author>Nathan Ratliff</author>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>


